--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 
 [workspace]
-members = ["src/ic", "src/common", "src/host"]
+members = ["src/ic", "src/common", "src/host", "src/tls"]
 
 [profile.release]
 lto = true
