Remove lots of unnecessary code. Remove redundant .did file. Move toward the proposed API(s).
Signed-off-by: John Plevyak <jplevyak@gmail.com>

--- a/src/ic/makefile
+++ b/src/ic/makefile
@@ -1,3 +1,4 @@
 all:
 	cargo build --release --target wasm32-unknown-unknown
-	ic-cdk-optimizer target/wasm32-unknown-unknown/release/dfnhack7.wasm -o target/wasm32-unknown-unknown/release/dfnhack7-opt.wasm
+	cargo install ic-cdk-optimizer --root target
+	target/bin/ic-cdk-optimizer ../../target/wasm32-unknown-unknown/release/dfnhack7.wasm -o ../../target/wasm32-unknown-unknown/release/dfnhack7-opt.wasm
