--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.10.0",
-    "@dfinity/candid": "0.10.0",
-    "@dfinity/principal": "0.10.0",
+    "@dfinity/agent": "latest",
+    "@dfinity/candid": "latest",
+    "@dfinity/principal": "latest",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
     "js-sha256": "0.9.0",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "style-loader": "^3.2.1",
     "terser-webpack-plugin": "5.1.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
     "util": "0.12.3",
     "webpack": "^5.24.4",
     "webpack-cli": "4.5.0",
@@ -38,5 +42,10 @@
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "^0.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
