--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   ],
   "dependencies": {
     "@dfinity/auth-client": "^0.10.0",
+    "bulma": "^0.9.3",
     "react": "^17.0.2",
+    "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2"
   }
 }
