--- a/src/ic/Cargo.toml
+++ b/src/ic/Cargo.toml
@@ -14,6 +14,7 @@ base64 = "0.13"
 candid = "0.6.21"
 fuzzy-matcher = "0.3.7"
 dfnhack7_common = { path = "../common" }
+hex = "0.4"
 ic-cdk = "0.3.0"
 ic-cdk-macros = "0.3.0"
 ic-types = "0.1.2"
